--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,16 @@
 			<scope>runtime</scope>
 		</dependency>
 
+			<!-- JUnit for testing -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13.2</version> <!-- or the latest version -->
+			<scope>test</scope>
+		</dependency>
+			<!-- Other dependencies -->
+
+
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
